Fixed bug #45585 (fread() return value for EOF inconsistent between PHP 5 and 6)